update fig and code-related

--- a/notebook/R1_SliceEquivalence.ipynb
+++ b/notebook/R1_SliceEquivalence.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,8 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(\"../src\"))\n",
-    "from utils import load_banksy_result"
+    "from utils import load_banksy_result\n",
+    "from plot import CM"
    ]
   },
   {
@@ -132,12 +133,13 @@
    "source": [
     "colors = banksy_024['banksy_cluster'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(6*CM, 6*CM),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_024[\"x\"],\n",
     "    banksy_024[\"y\"],\n",
     "    s=0.3,\n",
-    "    c=colors\n",
+    "    c=colors,\n",
+    "    rasterized=True\n",
     ")\n",
     "\n",
     "ax = plt.gca()  # Get the current axis\n",
@@ -146,19 +148,10 @@
     "plt.xlim(-10, 1810)\n",
     "plt.ylim(-10, 1810)\n",
     "\n",
-    "# Correct way to hide spines\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
-    "ax.set_xticks([])\n",
-    "ax.set_yticks([])\n",
     "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
     "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
-    "plt.title(\"Bregma -0.24 mm\", fontsize=7)\n",
-    "plt.xlabel(\"(μm)\", fontsize=5)\n",
-    "plt.ylabel(\"(μm)\", fontsize=5)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
+    "plt.title(\"Bregma -0.24 mm\", fontsize=6)\n",
     "plt.show()\n"
    ]
   },
@@ -183,12 +176,13 @@
    "source": [
     "colors = banksy_016['banksy_cluster'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(6*CM, 6*CM),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_016[\"x\"],\n",
     "    banksy_016[\"y\"],\n",
     "    s=0.3,\n",
-    "    c=colors\n",
+    "    c=colors,\n",
+    "    rasterized=True\n",
     ")\n",
     "\n",
     "ax = plt.gca()  # Get the current axis\n",
@@ -197,19 +191,10 @@
     "plt.xlim(-10, 1810)\n",
     "plt.ylim(-10, 1810)\n",
     "\n",
-    "# Correct way to hide spines\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
     "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
     "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
-    "ax.set_xticks([])\n",
-    "ax.set_yticks([])\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
-    "plt.title(\"Bregma 0.16 mm\", fontsize=7)\n",
-    "plt.xlabel(\"(μm)\", fontsize=5)\n",
-    "plt.ylabel(\"(μm)\", fontsize=5)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
+    "plt.title(\"Bregma 0.16 mm\", fontsize=6)\n",
     "plt.show()\n"
    ]
   },
@@ -234,12 +219,13 @@
    "source": [
     "colors = banksy_026['banksy_cluster'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(6*CM, 6*CM),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_026[\"x\"],\n",
     "    banksy_026[\"y\"],\n",
     "    s=0.3,\n",
-    "    c=colors\n",
+    "    c=colors,\n",
+    "    rasterized=True\n",
     ")\n",
     "\n",
     "ax = plt.gca()  # Get the current axis\n",
@@ -248,19 +234,10 @@
     "plt.xlim(-10, 1810)\n",
     "plt.ylim(-10, 1810)\n",
     "\n",
-    "# Correct way to hide spines\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "\n",
     "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
     "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
-    "ax.set_xticks([])\n",
-    "ax.set_yticks([])\n",
-    "plt.title(\"Bregma 0.26 mm\", fontsize=7)\n",
-    "plt.xlabel(\"(μm)\", fontsize=5)\n",
-    "plt.ylabel(\"(μm)\", fontsize=5)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
+    "plt.title(\"Bregma 0.26 mm\", fontsize=6)\n",
     "plt.show()"
    ]
   },
@@ -302,19 +279,19 @@
     "df_normalized = df_normalized.sort_index(ascending=False)\n",
     "\n",
     "\n",
-    "plt.figure(figsize=(13/2.54, 6/2.54), dpi=600)\n",
+    "plt.figure(figsize=(18*CM, 6*CM), dpi=600)\n",
     "\n",
-    "ax = df_normalized.plot(kind=\"barh\", stacked=True, figsize=(15, 6), color=[full_color_map.get(label) for label in df_normalized.columns])\n",
+    "ax = df_normalized.plot(kind=\"barh\", stacked=True, figsize=(18*CM, 6*CM), color=[full_color_map.get(label) for label in df_normalized.columns])\n",
     "\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
     "ax.get_legend().remove()\n",
-    "ax.tick_params(axis='x', labelsize=11)\n",
-    "ax.tick_params(axis='y', labelsize=11)\n",
+    "ax.tick_params(axis='x', labelsize=5)\n",
+    "ax.tick_params(axis='y', labelsize=5)\n",
     "\n",
-    "plt.xlabel(\"Clusters Proportion\",fontsize=13)\n",
-    "plt.ylabel(\"Bregma\",fontsize=13)\n",
-    "plt.title(\"Normalized Stacked Bar Plot of BANKSY Cluster by Bregma\",fontsize=15)\n",
+    "plt.xlabel(\"Clusters Proportion\",fontsize=6)\n",
+    "plt.ylabel(\"Bregma\",fontsize=6)\n",
+    "plt.title(\"Normalized Stacked Bar Plot of BANKSY Cluster by Bregma\",fontsize=6)\n",
     "\n",
     "plt.show()\n"
    ]
@@ -345,24 +322,21 @@
    "source": [
     "colors = all_UMAP['banksy'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(8/2.54, 8/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(8*CM, 8*CM),  dpi=600)\n",
     "\n",
-    "sc = plt.scatter(all_UMAP['UMAP_1'], all_UMAP['UMAP_2'], s=0.3, c=colors)\n",
+    "sc = plt.scatter(all_UMAP['UMAP_1'], all_UMAP['UMAP_2'], s=0.3, c=colors, rasterized=True)\n",
     "\n",
     "ax = plt.gca()\n",
     "ax.set_aspect('equal', adjustable='box')\n",
     "\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
     "ax.set_xticks([])\n",
     "ax.set_yticks([])\n",
-    "plt.title(\"All Slices\", fontsize=8)\n",
-    "plt.xlabel(\"UMAP1\", fontsize=7)\n",
-    "plt.ylabel(\"UMAP2\", fontsize=7)\n",
+    "plt.title(\"All Slices\", fontsize=6)\n",
+    "plt.xlabel(\"UMAP1\", fontsize=6)\n",
+    "plt.ylabel(\"UMAP2\", fontsize=6)\n",
     "plt.xlim(-20,30)\n",
     "plt.ylim(-30,20)\n",
     "plt.show()"
@@ -387,19 +361,16 @@
    "source": [
     "colors = B24_UMAP['banksy'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(8/2.54, 8/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(8*CM, 8*CM),  dpi=600)\n",
     "\n",
-    "sc = plt.scatter(B24_UMAP['UMAP_1'], B24_UMAP['UMAP_2'], s=0.3, c=colors)\n",
+    "sc = plt.scatter(B24_UMAP['UMAP_1'], B24_UMAP['UMAP_2'], s=0.3, c=colors, rasterized=True)\n",
     "\n",
     "ax = plt.gca()\n",
     "ax.set_aspect('equal', adjustable='box')\n",
     "\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
     "ax.set_xticks([])\n",
     "ax.set_yticks([])\n",
     "plt.title(\"Bregma -0.24 mm\", fontsize=8)\n",
@@ -428,19 +399,16 @@
    "source": [
     "colors = B16_UMAP['banksy'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(8/2.54, 8/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(8*CM, 8*CM),  dpi=600)\n",
     "\n",
-    "sc = plt.scatter(B16_UMAP['UMAP_1'], B16_UMAP['UMAP_2'], s=0.3, c=colors)\n",
+    "sc = plt.scatter(B16_UMAP['UMAP_1'], B16_UMAP['UMAP_2'], s=0.3, c=colors, rasterized=True)\n",
     "\n",
     "ax = plt.gca()\n",
     "ax.set_aspect('equal', adjustable='box')\n",
     "\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
     "ax.set_xticks([])\n",
     "ax.set_yticks([])\n",
     "plt.title(\"Bregma 0.16 mm\", fontsize=8)\n",
@@ -469,19 +437,16 @@
    "source": [
     "colors = B26_UMAP['banksy'].map(full_color_map)\n",
     "\n",
-    "plt.figure(figsize=(8/2.54, 8/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(8*CM, 8*CM),  dpi=600)\n",
     "\n",
-    "sc = plt.scatter(B26_UMAP['UMAP_1'], B26_UMAP['UMAP_2'], s=0.3, c=colors)\n",
+    "sc = plt.scatter(B26_UMAP['UMAP_1'], B26_UMAP['UMAP_2'], s=0.3, c=colors, rasterized=True)\n",
     "\n",
     "ax = plt.gca()\n",
     "ax.set_aspect('equal', adjustable='box')\n",
     "\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
     "ax.set_xticks([])\n",
     "ax.set_yticks([])\n",
     "plt.title(\"Bregma 0.26 mm\", fontsize=8)\n",
@@ -519,12 +484,13 @@
     "color_map = {7: 'orange', 8: 'red'}\n",
     "colors = banksy_024_MOD['banksy_cluster'].map(color_map)\n",
     "\n",
-    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(6*CM, 6*CM),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_024_MOD[\"x\"],\n",
     "    banksy_024_MOD[\"y\"],\n",
     "    s=0.3,\n",
     "    c=colors,\n",
+    "    rasterized=True\n",
     ")\n",
     "\n",
     "ax = plt.gca()\n",
@@ -532,17 +498,10 @@
     "plt.xlim(-10, 1810)\n",
     "plt.ylim(-10, 1810)\n",
     "\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
-    "ax.set_xticks([])\n",
-    "ax.set_yticks([])\n",
-    "plt.title(\"Bregma -0.24 mm\", fontsize  = 7)\n",
-    "plt.xlabel(\"(μm)\", fontsize  = 5)\n",
-    "plt.ylabel(\"(μm)\", fontsize  = 5)\n",
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
+    "plt.title(\"Bregma -0.24 mm\", fontsize  = 6)\n",
     "plt.show()\n"
    ]
   },
@@ -567,12 +526,13 @@
     "color_map = {7: 'orange', 8: 'red'}\n",
     "colors = banksy_016_MOD['banksy_cluster'].map(color_map)\n",
     "\n",
-    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(6*CM, 6*CM),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_016_MOD[\"x\"],\n",
     "    banksy_016_MOD[\"y\"],\n",
     "    s=0.3,\n",
     "    c=colors,\n",
+    "    rasterized=True\n",
     ")\n",
     "\n",
     "ax = plt.gca()\n",
@@ -580,17 +540,10 @@
     "plt.xlim(-10, 1810)\n",
     "plt.ylim(-10, 1810)\n",
     "\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
-    "ax.set_xticks([])\n",
-    "ax.set_yticks([])\n",
-    "plt.title(\"Bregma 0.16 mm\", fontsize  = 7)\n",
-    "plt.xlabel(\"(μm)\", fontsize  = 5)\n",
-    "plt.ylabel(\"(μm)\", fontsize  = 5)\n",
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
+    "plt.title(\"Bregma 0.16 mm\", fontsize  = 6)\n",
     "plt.show()"
    ]
   },
@@ -615,12 +568,13 @@
     "color_map = {7: 'orange', 8: 'red'}\n",
     "colors = banksy_026_MOD['banksy_cluster'].map(color_map)\n",
     "\n",
-    "plt.figure(figsize=(6/2.54, 6/2.54),  dpi=600)\n",
+    "plt.figure(figsize=(6*CM, 6*CM),  dpi=600)\n",
     "sc = plt.scatter(\n",
     "    banksy_026_MOD[\"x\"],\n",
     "    banksy_026_MOD[\"y\"],\n",
     "    s=0.3,\n",
     "    c=colors,\n",
+    "    rasterized=True\n",
     ")\n",
     "\n",
     "ax = plt.gca()\n",
@@ -628,17 +582,10 @@
     "plt.xlim(-10, 1810)\n",
     "plt.ylim(-10, 1810)\n",
     "\n",
-    "ax.spines[\"top\"].set_visible(False)\n",
-    "ax.spines[\"right\"].set_visible(False)\n",
-    "ax.xaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.yaxis.set_tick_params(labelsize=6, width=0.3)\n",
-    "ax.spines['left'].set_linewidth(0.3)\n",
-    "ax.spines['bottom'].set_linewidth(0.3)\n",
-    "ax.set_xticks([])\n",
-    "ax.set_yticks([])\n",
-    "plt.title(\"Bregma 0.26 mm\", fontsize  = 7)\n",
-    "plt.xlabel(\"(μm)\", fontsize  = 5)\n",
-    "plt.ylabel(\"(μm)\", fontsize  = 5)\n",
+    "ax.xaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.yaxis.set_tick_params(labelsize=5, width=0.3)\n",
+    "ax.spines[[\"top\", \"right\", \"left\", \"bottom\"]].set_linewidth(0.3)\n",
+    "plt.title(\"Bregma 0.26 mm\", fontsize  = 6)\n",
     "plt.show()"
    ]
   },
