--- a/notebook/R2_VSI.ipynb
+++ b/notebook/R2_VSI.ipynb
@@ -23,11 +23,10 @@
     "sys.path.append(os.path.abspath(\"../src\"))\n",
     "from utils import load_merfish_signal_df, load_banksy_result, load_merfish_data, load_boundaries_data\n",
     "from utils import extract_cell_vsi\n",
-    "from plot import plot_VSI_map, plot_vsi_with_named_squares, plot_vsi_distribution_comparison, plot_normalized_histogram, plot_vsi_qqplot\n",
+    "from plot import plot_VSI_map, plot_vsi_with_named_squares, plot_vsi_distribution_comparison, plot_normalized_histogram, plot_vsi_qqplot, CM\n",
     "\n",
     "from IPython.display import display\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import numpy as np"
    ]
   },
   {
@@ -198,14 +197,15 @@
    "outputs": [],
    "source": [
     "SIM = plot_VSI_map(\n",
-    "    cell_integrity = signal_integrity,\n",
-    "    cell_strength = signal_strength,\n",
+    "    integrity = signal_integrity,\n",
+    "    strength = signal_strength,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10/2.54,\n",
+    "    figure_height=10*CM,\n",
     "    cmap=\"BIH\",\n",
     "    side_display=\"hist\", # \"hist\", \"colorbar\", or None\n",
     "    plot_boundary=False,\n",
-    "    plot_centroid=False\n",
+    "    plot_centroid=False,\n",
+    "    plot_rasterized=True\n",
     ")\n",
     "\n",
     "display(SIM)"
@@ -219,10 +219,10 @@
    "source": [
     "# VSI map without cell boundaries\n",
     "SIM_noboundaries = plot_VSI_map(\n",
-    "    cell_integrity = signal_integrity,\n",
-    "    cell_strength = signal_strength,\n",
+    "    integrity = signal_integrity,\n",
+    "    strength = signal_strength,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10/2.54,\n",
+    "    figure_height=10*CM,\n",
     "    cmap=\"BIH\",\n",
     "    side_display=\"colorbar\",\n",
     "    plot_boundary=False,\n",
@@ -260,15 +260,16 @@
    "outputs": [],
    "source": [
     "cell_SIM_nb = plot_VSI_map(\n",
-    "    cell_integrity = cell_integrity,\n",
-    "    cell_strength = cell_strength,\n",
+    "    integrity = cell_integrity,\n",
+    "    strength = cell_strength,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10/2.54,\n",
+    "    figure_height=10*CM,\n",
     "    cmap=\"BIH\",\n",
     "    # side_display=\"hist\",\n",
     "    side_display=\"colorbar\",\n",
     "    plot_boundary=False,\n",
     "    plot_centroid=False,\n",
+    "    plot_rasterized=True\n",
     ")\n",
     "\n",
     "display(cell_SIM_nb)"
@@ -281,10 +282,10 @@
    "outputs": [],
    "source": [
     "cell_SIM = plot_VSI_map(\n",
-    "    cell_integrity = cell_integrity,\n",
-    "    cell_strength = cell_strength,\n",
+    "    integrity = cell_integrity,\n",
+    "    strength = cell_strength,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10/2.54,\n",
+    "    figure_height=10*CM,\n",
     "    cmap=\"BIH\",\n",
     "    side_display=None,\n",
     "    boundary_df=boundaries_df,\n",
@@ -311,10 +312,10 @@
    "outputs": [],
    "source": [
     "regions = [\n",
-    "    {\"x\": 400, \"y\": 1190, \"name\": \"Region 1\"},\n",
-    "    {\"x\": 1400, \"y\": 250, \"name\": \"Region 4\"},\n",
-    "    {\"x\": 50, \"y\": 440, \"name\": \"Region 3\"},\n",
-    "    {\"x\": 1350, \"y\": 950, \"name\": \"Region 2\"},\n",
+    "    {\"x\": 400, \"y\": 1190, \"name\": \"R1\"},\n",
+    "    {\"x\": 1400, \"y\": 250, \"name\": \"R4\"},\n",
+    "    {\"x\": 50, \"y\": 440, \"name\": \"R3\"},\n",
+    "    {\"x\": 1350, \"y\": 950, \"name\": \"R2\"},\n",
     "]"
    ]
   },
@@ -325,8 +326,8 @@
    "outputs": [],
    "source": [
     "VSI_ROI = plot_vsi_with_named_squares(cell_integrity, cell_strength, \n",
-    "                                      signal_threshold=3.0,\n",
-    "    figure_height=10/2.54,\n",
+    "    signal_threshold=3.0,\n",
+    "    figure_height=10*CM,\n",
     "    cmap=\"BIH\",\n",
     "    side_display=None,\n",
     "    # side_display='colorbar',\n",
@@ -335,7 +336,8 @@
     "    boundary_color=\"yellow\",\n",
     "    boundary_width=0.3,\n",
     "    plot_centroid=False,\n",
-    "    named_squares=regions)\n",
+    "    named_squares=regions,\n",
+    "    plot_rasterized=True)\n",
     "\n",
     "display(VSI_ROI)"
    ]
@@ -441,7 +443,7 @@
     "    cell_integrity_2=MOD2_int,\n",
     "    cell_strength_2=MOD2_str,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=6/2.54,\n",
+    "    figure_height=6*CM,\n",
     "    cmap=\"BIH\",\n",
     "    ylim=(1e-1,64)\n",
     ")"
