--- a/notebook/R3_TranscriptsNeighbours.ipynb
+++ b/notebook/R3_TranscriptsNeighbours.ipynb
@@ -19,12 +19,11 @@
     "sys.path.append(os.path.abspath(\"../src\"))\n",
     "\n",
     "from utils import load_merfish_signal_df, load_banksy_result, load_merfish_data, load_boundaries_data\n",
-    "from plot import plot_VSI_map, plot_celltypes, plot_vsi_with_named_squares, plot_circular_neighborhood, plot_knn_neighborhood\n",
+    "from plot import plot_VSI_map, plot_celltypes, plot_vsi_with_named_squares, plot_circular_neighborhood, plot_knn_neighborhood, CM\n",
     "\n",
     "from IPython.display import display\n",
     "from pathlib import Path\n",
     "\n",
-    "import pandas as pd\n",
     "import numpy as np"
    ]
   },
@@ -229,11 +228,11 @@
    "outputs": [],
    "source": [
     "regions = [\n",
-    "    {\"x\": 250, \"y\": 1450, \"name\": \"Region 1\"},\n",
-    "    {\"x\": 1350, \"y\": 1300, \"name\": \"Region 2\"},\n",
-    "    {\"x\": 850, \"y\": 950, \"name\": \"Region 3\"},\n",
-    "    {\"x\": 200, \"y\": 300, \"name\": \"Region 4\"},\n",
-    "    {\"x\": 1580, \"y\": 350, \"name\": \"Region 5\"}\n",
+    "    {\"x\": 250, \"y\": 1450, \"name\": \"R1\"},\n",
+    "    {\"x\": 1350, \"y\": 1300, \"name\": \"R2\"},\n",
+    "    {\"x\": 850, \"y\": 950, \"name\": \"R3\"},\n",
+    "    {\"x\": 200, \"y\": 300, \"name\": \"R4\"},\n",
+    "    {\"x\": 1580, \"y\": 350, \"name\": \"R5\"}\n",
     "]"
    ]
   },
@@ -246,15 +245,16 @@
     "# complete vsi map\n",
     "VSI_ROI = plot_vsi_with_named_squares(signal_integrity, signal_strength, \n",
     "                                          signal_threshold=3.0,\n",
-    "    figure_height=10/2.54,\n",
+    "    figure_height=10*CM,\n",
     "    cmap=\"BIH\",\n",
     "    side_display='colorbar',\n",
-    "    boundary_df=boundaries_df,\n",
+    "    # boundary_df=boundaries_df,\n",
     "    plot_boundary=False,\n",
     "    boundary_color=\"yellow\",\n",
     "    boundary_width=0.3,\n",
     "    plot_centroid=False,\n",
-    "    named_squares=regions)\n",
+    "    named_squares=regions,\n",
+    "    plot_rasterized=True)\n",
     "display(VSI_ROI)"
    ]
   },
@@ -278,7 +278,7 @@
     "    plot_boundary=True,\n",
     "    boundary_df=boundaries_df,\n",
     "    signal_threshold=3.0,\n",
-    "    figure_height=10/2.54,\n",
+    "    figure_height=10*CM,\n",
     "    cmap=\"BIH\",\n",
     "    x_range=[250,350],\n",
     "    y_range=[1450, 1550],\n",
