--- a/notebook/R4_MODmarkers.ipynb
+++ b/notebook/R4_MODmarkers.ipynb
@@ -21,9 +21,7 @@
     "from utils import load_merfish_signal_df, load_banksy_result\n",
     "from plot import plot_marker_signals\n",
     "\n",
-    "from pathlib import Path\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "from pathlib import Path"
    ]
   },
   {
