--- a/notebook/R5_MODscRNA.ipynb
+++ b/notebook/R5_MODscRNA.ipynb
@@ -29,7 +29,6 @@
     "from utils import load_merfish_signal_df, load_banksy_result, load_merfish_data, load_scRNA_data\n",
     "from plot import plot_annotate_heatmap\n",
     "\n",
-    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -174,7 +173,7 @@
    "outputs": [],
    "source": [
     "# all differentially expressed genes\n",
-    "DE_genes = ['Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3', 'Mbp', 'Lpar1', 'Trh', 'Ucn3', 'Cck']\n",
+    "DE_genes = ['Mbp', 'Lpar1', 'Trh', 'Ucn3', 'Cck', 'Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3']\n",
     "# DE_genes_MOD2: 7\n",
     "DE_genes_MOD2 = ['Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3']\n",
     "# DE_genes_MOD1: 8\n",
@@ -190,7 +189,7 @@
     "sc_data = adata.to_df()\n",
     "sc_DE_MOD2_df = sc_data[DE_genes_MOD2]\n",
     "sc_DE_MOD1_df = sc_data[DE_genes_MOD1]\n",
-    "sc_DE = pd.concat([sc_DE_MOD2_df, sc_DE_MOD1_df], axis=1)\n",
+    "sc_DE = pd.concat([sc_DE_MOD1_df, sc_DE_MOD2_df], axis=1)\n",
     "\n",
     "sc_cell_class = adata.obs['Cell_class']"
    ]
@@ -202,7 +201,7 @@
    "outputs": [],
    "source": [
     "# MERFISH, MOD, Marker Genes\n",
-    "MOD_merfish = merfish_data[(merfish_data['banksy']==7) | (merfish_data['banksy']==8)]\n",
+    "MOD_merfish = merfish_data[(merfish_data['banksy']==8) | (merfish_data['banksy']==7)]\n",
     "MOD_merfish = MOD_merfish.sort_values(by='banksy')\n",
     "\n",
     "common_genes = [gene for gene in DE_genes if gene in MOD_merfish.columns]\n",
