--- a/notebook/R6_NeuronCluster.ipynb
+++ b/notebook/R6_NeuronCluster.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "from utils import load_scRNA_data\n",
     "from utils import order_neuron_clusters, get_cluster_boundaries\n",
-    "from plot import plot_neuron_cluster_heatmap\n",
+    "from plot import plot_neuron_cluster_heatmap, CM\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "# all differentially expressed genes\n",
-    "DE_genes = ['Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3', 'Mbp', 'Lpar1', 'Trh', 'Ucn3', 'Cck']\n",
+    "DE_genes = ['Mbp', 'Lpar1', 'Trh', 'Ucn3', 'Cck', 'Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3']\n",
     "# DE_genes_MOD2: 7\n",
     "DE_genes_MOD2 = ['Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3']\n",
     "# DE_genes_MOD1: 8\n",
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gene_Group = pd.DataFrame([0,0,0,0,0,0,0,0,0,1,1,1,1,1], columns=['cluster'])"
+    "Gene_Group = pd.DataFrame([0,0,0,0,0,1,1,1,1,1,1,1,1,1], columns=['cluster'])"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "Ex_sc_data = sc_data_sorted[sc_data_sorted['Neuronal_cluster'].str.startswith(\"e\")]\n",
     "sc_MOD2 = Ex_sc_data.loc[:, [gene for gene in DE_genes_MOD2 if gene in Ex_sc_data.columns]]\n",
     "sc_MOD1 = Ex_sc_data.loc[:, [gene for gene in DE_genes_MOD1 if gene in Ex_sc_data.columns]]\n",
-    "Ex_DE = pd.concat([sc_MOD2, sc_MOD1], axis=1)\n",
+    "Ex_DE = pd.concat([sc_MOD1, sc_MOD2], axis=1)\n",
     "\n",
     "Ex_cluster = Ex_sc_data[\"Neuronal_cluster\"]"
    ]
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,:1169], re_Ex_clu[:1169], DE_g=True, figures=(18/2.54,13/2.54))"
+    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,:1169], re_Ex_clu[:1169], DE_g=True, figures=(18*CM,13*CM))"
    ]
   },
   {
@@ -261,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,1169:3194], re_Ex_clu[1169:3194], DE_g=True, figures=(18/2.54,23/2.54))"
+    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,1169:3194], re_Ex_clu[1169:3194], DE_g=True, figures=(18*CM,23*CM))"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,3194:], re_Ex_clu[3194:], DE_g=True, figures=(18/2.54,2.5/2.54))"
+    "plot_neuron_cluster_heatmap(re_Ex_DE.iloc[:,3194:], re_Ex_clu[3194:], DE_g=True, figures=(18*CM,2.5*CM))"
    ]
   },
   {
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,:2269], re_IN_clu[:2269], DE_g=True, figures=(18/2.54,9/2.54))"
+    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,:2269], re_IN_clu[:2269], DE_g=True, figures=(18*CM,9*CM))"
    ]
   },
   {
@@ -314,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,2269:8148], re_IN_clu[2269:8148], DE_g=True, figures=(18/2.54,23/2.54))"
+    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,2269:8148], re_IN_clu[2269:8148], DE_g=True, figures=(18*CM,23*CM))"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,8148:], re_IN_clu[8148:], DE_g=True, figures=(18/2.54,22/2.54))"
+    "plot_neuron_cluster_heatmap(re_IN_DE.iloc[:,8148:], re_IN_clu[8148:], DE_g=True, figures=(18*CM,22*CM))"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_neuron_cluster_heatmap(re_Hy_DE, re_Hy_clu, DE_g=True,  figures=(18/2.54,3/2.54))"
+    "plot_neuron_cluster_heatmap(re_Hy_DE, re_Hy_clu, DE_g=True,  figures=(18*CM,3*CM))"
    ]
   }
  ],
