--- a/notebook/R7_MarkerVSI.ipynb
+++ b/notebook/R7_MarkerVSI.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "from utils import load_merfish_signal_df, load_banksy_result, load_merfish_data, load_boundaries_data\n",
     "from utils import marker_transcripts_vsi, extract_cell_vsi\n",
-    "from plot import plot_marker_vsi_hist\n",
+    "from plot import plot_marker_vsi_hist, CM\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -320,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "plot_marker_vsi_hist(ax[0], Lpar1_integrity, Lpar1_strength, signal_thr=3, label=\"Lpar1\", xlim=(0,16), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Plin3_integrity, Plin3_strength, signal_thr=3, label=\"Plin3\", xlim=(0,16), log=False)\n",
     "plot_marker_vsi_hist(ax[2], Gjc3_integrity, Gjc3_strength, signal_thr=3, label=\"Gjc3\", xlim=(0,16), log=False)\n",
@@ -336,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "\n",
     "plot_marker_vsi_hist(ax[0], Syt4_integrity, Syt4_strength, signal_thr=3, label=\"Syt4\", xlim=(0,16), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Gad1_integrity, Gad1_strength, signal_thr=3, label=\"Gad1\", xlim=(0,16), log=False)\n",
@@ -486,7 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "plot_marker_vsi_hist(ax[0], Lpar1_cell_si, Lpar1_cell_ss, signal_thr=3, label=\"Lpar1\", xlim=(0,20), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Plin3_cell_si, Plin3_cell_ss, signal_thr=3, label=\"Plin3\", xlim=(0,20), log=False)\n",
     "plot_marker_vsi_hist(ax[2], Gjc3_cell_si, Gjc3_cell_ss, signal_thr=3, label=\"Gjc3\", xlim=(0,20), log=False)\n",
@@ -502,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "\n",
     "plot_marker_vsi_hist(ax[0], Syt4_cell_si, Syt4_cell_ss, signal_thr=3, label=\"Syt4\", xlim=(0,20), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Gad1_cell_si, Gad1_cell_ss, signal_thr=3, label=\"Gad1\", xlim=(0,20), log=False)\n",
@@ -526,7 +526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "plot_marker_vsi_hist(ax[0], Lpar1_MOD_si, Lpar1_MOD_ss, signal_thr=3, label=\"Lpar1\", xlim=(0,40), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Plin3_MOD_si, Plin3_MOD_ss, signal_thr=3, label=\"Plin3\", xlim=(0,40), log=False)\n",
     "plot_marker_vsi_hist(ax[2], Gjc3_MOD_si, Gjc3_MOD_ss, signal_thr=3, label=\"Gjc3\", xlim=(0,40), log=False)\n",
@@ -542,7 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "plot_marker_vsi_hist(ax[0], Lpar1_MOD_si, Lpar1_MOD_ss, signal_thr=3, label=\"Lpar1\", xlim=(1e-1,64), log=True)\n",
     "plot_marker_vsi_hist(ax[1], Plin3_MOD_si, Plin3_MOD_ss, signal_thr=3, label=\"Plin3\", xlim=(1e-1,64), log=True)\n",
     "plot_marker_vsi_hist(ax[2], Gjc3_MOD_si, Gjc3_MOD_ss, signal_thr=3, label=\"Gjc3\", xlim=(1e-1,64), log=True)\n",
@@ -558,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "\n",
     "plot_marker_vsi_hist(ax[0], Syt4_MOD_si, Syt4_MOD_ss, signal_thr=3, label=\"Syt4\", xlim=(0,40), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Gad1_MOD_si, Gad1_MOD_ss, signal_thr=3, label=\"Gad1\", xlim=(0,40), log=False)\n",
@@ -575,7 +575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "\n",
     "plot_marker_vsi_hist(ax[0], Syt4_MOD_si, Syt4_MOD_ss, signal_thr=3, label=\"Syt4\", xlim=(1e-1,64), log=True)\n",
     "plot_marker_vsi_hist(ax[1], Gad1_MOD_si, Gad1_MOD_ss, signal_thr=3, label=\"Gad1\", xlim=(1e-1,64), log=True)\n",
@@ -599,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "plot_marker_vsi_hist(ax[0], Lpar1_MOD1_si, Lpar1_MOD1_ss, signal_thr=3, label=\"Lpar1\", xlim=(0,55), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Plin3_MOD1_si, Plin3_MOD1_ss, signal_thr=3, label=\"Plin3\", xlim=(0,55), log=False)\n",
     "plot_marker_vsi_hist(ax[2], Gjc3_MOD1_si, Gjc3_MOD1_ss, signal_thr=3, label=\"Gjc3\", xlim=(0,55), log=False)\n",
@@ -615,7 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "plot_marker_vsi_hist(ax[0], Lpar1_MOD1_si, Lpar1_MOD1_ss, signal_thr=3, label=\"Lpar1\", xlim=(1e-1,64), log=True)\n",
     "plot_marker_vsi_hist(ax[1], Plin3_MOD1_si, Plin3_MOD1_ss, signal_thr=3, label=\"Plin3\", xlim=(1e-1,64), log=True)\n",
     "plot_marker_vsi_hist(ax[2], Gjc3_MOD1_si, Gjc3_MOD1_ss, signal_thr=3, label=\"Gjc3\", xlim=(1e-1,64), log=True)\n",
@@ -631,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "\n",
     "plot_marker_vsi_hist(ax[0], Syt4_MOD1_si, Syt4_MOD1_ss, signal_thr=3, label=\"Syt4\", xlim=(0,55), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Gad1_MOD1_si, Gad1_MOD1_ss, signal_thr=3, label=\"Gad1\", xlim=(0,55), log=False)\n",
@@ -648,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "\n",
     "plot_marker_vsi_hist(ax[0], Syt4_MOD1_si, Syt4_MOD1_ss, signal_thr=3, label=\"Syt4\", xlim=(1e-1,64), log=True)\n",
     "plot_marker_vsi_hist(ax[1], Gad1_MOD1_si, Gad1_MOD1_ss, signal_thr=3, label=\"Gad1\", xlim=(1e-1,64), log=True)\n",
@@ -672,7 +672,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "plot_marker_vsi_hist(ax[0], Lpar1_MOD2_si, Lpar1_MOD2_ss, signal_thr=3, label=\"Lpar1\", xlim=(0,30), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Plin3_MOD2_si, Plin3_MOD2_ss, signal_thr=3, label=\"Plin3\", xlim=(0,30), log=False)\n",
     "plot_marker_vsi_hist(ax[2], Gjc3_MOD2_si, Gjc3_MOD2_ss, signal_thr=3, label=\"Gjc3\", xlim=(0,30), log=False)\n",
@@ -688,7 +688,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "plot_marker_vsi_hist(ax[0], Lpar1_MOD2_si, Lpar1_MOD2_ss, signal_thr=3, label=\"Lpar1\", xlim=(1e-1,32), log=True)\n",
     "plot_marker_vsi_hist(ax[1], Plin3_MOD2_si, Plin3_MOD2_ss, signal_thr=3, label=\"Plin3\", xlim=(1e-1,32), log=True)\n",
     "plot_marker_vsi_hist(ax[2], Gjc3_MOD2_si, Gjc3_MOD2_ss, signal_thr=3, label=\"Gjc3\", xlim=(1e-1,32), log=True)\n",
@@ -704,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "\n",
     "plot_marker_vsi_hist(ax[0], Syt4_MOD2_si, Syt4_MOD2_ss, signal_thr=3, label=\"Syt4\", xlim=(0,30), log=False)\n",
     "plot_marker_vsi_hist(ax[1], Gad1_MOD2_si, Gad1_MOD2_ss, signal_thr=3, label=\"Gad1\", xlim=(0,30), log=False)\n",
@@ -721,7 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(18/2.54, 11/2.54), dpi=600)\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(18*CM, 11*CM), dpi=600)\n",
     "\n",
     "plot_marker_vsi_hist(ax[0], Syt4_MOD2_si, Syt4_MOD2_ss, signal_thr=3, label=\"Syt4\", xlim=(1e-1,32), log=True)\n",
     "plot_marker_vsi_hist(ax[1], Gad1_MOD2_si, Gad1_MOD2_ss, signal_thr=3, label=\"Gad1\", xlim=(1e-1,32), log=True)\n",
