--- a/notebook/R8_ExMarkers.ipynb
+++ b/notebook/R8_ExMarkers.ipynb
@@ -24,16 +24,9 @@
     "import os\n",
     "sys.path.append(os.path.abspath(\"../src\"))\n",
     "\n",
-    "import importlib\n",
-    "import utils\n",
-    "import plot\n",
-    "\n",
-    "importlib.reload(utils)\n",
-    "importlib.reload(plot)\n",
-    "\n",
     "from utils import load_merfish_signal_df, load_banksy_result, load_merfish_data, load_boundaries_data\n",
     "from utils import extract_cell_vsi\n",
-    "from plot import histogram_comparison, plot_vsi_distribution_comparison, plot_normalized_histogram, plot_doublets\n",
+    "from plot import histogram_comparison, plot_vsi_distribution_comparison, plot_normalized_histogram, plot_doublets, CM\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -422,7 +415,7 @@
     "    title=\"All Transcripts\",\n",
     "    signal_threshold=3.0,\n",
     "    ylim=(1e-1,64),\n",
-    "    figure_height=7/2.54\n",
+    "    figure_height=8*CM\n",
     ")"
    ]
   },
@@ -449,7 +442,7 @@
     "    title=\"Excluding MOD1 Markers\",\n",
     "    signal_threshold=3.0,\n",
     "    ylim=(1e-1,64),\n",
-    "    figure_height=7/2.54\n",
+    "    figure_height=8*CM\n",
     ")"
    ]
   },
@@ -476,7 +469,7 @@
     "    title=\"Excluding MOD2 Markers\",\n",
     "    signal_threshold=3.0,\n",
     "    ylim=(1e-1,64),\n",
-    "    figure_height=7/2.54\n",
+    "    figure_height=7*CM\n",
     ")"
    ]
   },
@@ -503,7 +496,7 @@
     "    title=\"Excluding MOD Markers\",\n",
     "    signal_threshold=3.0,\n",
     "    ylim=(1e-1,64),\n",
-    "    figure_height=7/2.54\n",
+    "    figure_height=7*CM\n",
     ")"
    ]
   },
