--- a/notebook/R2_VSI.ipynb
+++ b/notebook/R2_VSI.ipynb
@@ -464,8 +464,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_vsi_qqplot(vals1, bins1, vals2, bins2)"
+    "plot_vsi_qqplot(vals1, bins1, vals2, bins2,xlab=\"Quantiles of MOD1 VSI\",\n",
+    "                      ylab=\"Quantiles of MOD2 VSI\",)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
