--- a/notebook/R5_MODscRNA.ipynb
+++ b/notebook/R5_MODscRNA.ipynb
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gene_Group = pd.DataFrame([0,0,0,0,0,0,0,0,0,1,1,1,1,1], columns=['cluster'])"
+    "Gene_Group = pd.DataFrame([0,0,0,0,0,1,1,1,1,1,1,1,1,1], columns=['cluster'])"
    ]
   },
   {
@@ -345,7 +345,7 @@
     "common_genes_wm = [gene for gene in DE_genes_MOD1 if gene in no_OD_merfish_data.columns]\n",
     "no_OD_merfish_DE_wm = no_OD_merfish_data[common_genes_wm]\n",
     "\n",
-    "no_OD_merfish_DE = pd.concat([no_OD_merfish_DE_gm, no_OD_merfish_DE_wm], axis=1).T\n",
+    "no_OD_merfish_DE = pd.concat([no_OD_merfish_DE_wm, no_OD_merfish_DE_gm], axis=1).T\n",
     "\n",
     "no_OD_cell_class = no_OD_merfish_data['Cell_class']"
    ]
