--- a/notebook/Ovrlpy_no_MODgm_markers.ipynb
+++ b/notebook/Ovrlpy_no_MODgm_markers.ipynb
@@ -13,7 +13,7 @@
     "**Data Link**: [Supplemental Data for: Segmentation-free inference of cell types from in situ transcriptomics data](https://zenodo.org/records/3478502)  \n",
     "\n",
     "In this notebook, we focus on analyzing the [mouse hypothalamus data](https://datadryad.org/stash/dataset/doi:10.5061/dryad.8t8s248) (Moffitt et al., 2018) using `ovrl.py` with a specific modification:  \n",
-    "- **transcripts from MOD2 subtype-specific marker genes are excluded** \n",
+    "- **transcripts from MOD_gm subtype-specific marker genes are excluded** \n",
     "\n",
     "in order to explore how their removal affects the VSI."
    ]
@@ -135,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e5f9aefd",
    "metadata": {},
    "outputs": [],
    "source": [
     "DE_genes = ['Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3']\n",
     "\n",
-    "non_MOD2_marker = coordinate_df[~coordinate_df['gene'].isin(DE_genes)]\n",
-    "non_MOD2_marker = non_MOD2_marker.copy()"
+    "non_MOD_gm_marker = coordinate_df[~coordinate_df['gene'].isin(DE_genes)]\n",
+    "non_MOD_gm_marker = non_MOD_gm_marker.copy()"
    ]
   },
   {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "edd6b2a8",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
    "source": [
     "# fit the ovrlpy model to the data\n",
     "dataset = ovrlpy.Ovrlp(\n",
-    "    non_MOD2_marker,\n",
+    "    non_MOD_gm_marker,\n",
     "    n_components=n_components,\n",
     "    n_workers=8,  # number of threads to use for processing\n",
     ")\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "86a45fef",
    "metadata": {},
    "outputs": [],
@@ -244,8 +244,8 @@
     "integrity = dataset.integrity_map\n",
     "signal = dataset.signal_map\n",
     "\n",
-    "np.savetxt(result_folder/'SignalIntegrity_exMOD2.txt', integrity)\n",
-    "np.savetxt(result_folder/'SignalStrength_exMOD2.txt', signal)"
+    "np.savetxt(result_folder/'SignalIntegrity_exMOD_gm.txt', integrity)\n",
+    "np.savetxt(result_folder/'SignalStrength_exMOD_gm.txt', signal)"
    ]
   },
   {
@@ -330,12 +330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "91630729",
    "metadata": {},
    "outputs": [],
    "source": [
-    "doublets.write_csv(result_folder / \"doublets_exMOD2_df.csv\")"
+    "doublets.write_csv(result_folder / \"doublets_exMOD_gm_df.csv\")"
    ]
   },
   {
