--- a/notebook/R8_DoubletsExample.ipynb
+++ b/notebook/R8_DoubletsExample.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "4428d124",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "47872865",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2f75ad37",
    "metadata": {},
    "outputs": [],
@@ -464,14 +464,14 @@
    "id": "7807e7d9",
    "metadata": {},
    "source": [
-    "#### Doublet2: Excitatory\n",
+    "### Doublet2: Excitatory\n",
     "\n",
     "doublet_to_show = 158  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "add5eee8",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d6fde74c",
    "metadata": {},
    "outputs": [
